--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     <div class="content">
       <h1 class="bottom-margin-large">Epilogue</h1>
       <p>March 28, 2014</p>
+      
+            <a href="/Epilogue.html"><h1 class="bottom-margin-large">Epilogue</h1>    </a>  
+
+
       <p>Three years ago, we set out to create an open, independent reading platform. We believed that the reading experience could be beautiful and that it was meant to be shared.</p>
 
       <p>Along the way, we created a reading app for iOS and Android that proved these things to be true. We’re proud of the product we built, but even more so, we’re grateful for the community of readers that made it grow.</p>
