--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="stylesheets/normalize.css" media="screen" rel="stylesheet" type="text/css" />
 <link href="stylesheets/all.css" media="screen" rel="stylesheet" type="text/css" />
 
-    <link rel="shortcut icon" type="image/png" href="images/favicon.ico" />
+    <link rel="shortcut icon" type="image/svg" href="images/logo.svg" />
   </head>
 
   <body class="index">
