--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   <body class="index">
     <!-- HEADER -->
 <header class="header clearfix">
+        <img src="images/logo.svg">
+
   <a class="readmill-logo-medium left" href="/">Readmill</a>
 </header>
 
