--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body class="index">
     <!-- HEADER -->
 <header class="header clearfix">
-        <img src="images/logo.svg">
+        <img src="/Images/logo.svg" width="100px">
 
   <a class="readmill-logo-medium left" href="/">Readmill</a>
 </header>
